inter/Tests/Valid/packages.intert
packagetype _plain
packagetype _code

package main _plain
	kind K_number int32
	constant x K_number = 11
	package sub _plain
		constant y /main/K_number = 17
